plugins/kotlin/injection/k2/tests/testData/kotlinInjectedInMarkdownHighlighting/withKotlinExpressions.md.highlighting
<!HIGHLIGHTING("textAttributesKey='MARKDOWN_CODE_FENCE_MARKER'")!>```<!><!HIGHLIGHTING("textAttributesKey='MARKDOWN_CODE_FENCE_LANGUAGE'")!>kotlin<!>
val x = 1
println(x + 1)
<!HIGHLIGHTING("textAttributesKey='MARKDOWN_CODE_FENCE_MARKER'")!>```<!>
